# codequal_analyzer

./: .gitignore  CITATION.cff  README.md
python/: README.md  pyproject.toml  setup.py
python/examples/: cisq_analyzer_tour.py  comprehensive_insights.py  demo.py  file_assessment_demo.py  quick_assessment_example.py  quick_quality_check.py  rich_insights.py  specific_analyzer.py
python/examples/sample_project/: __init__.py  maintainability_issues.py  performance_issues.py  reliability_issues.py  security_issues.py
python/pycq_analyzer/: __init__.py  abc_criterion.py  api.py  main.py  utils.py
python/pycq_analyzer/analyzers/: __init__.py  bandit_analyzer.py  base_analyzer.py  data_structure_analyzer.py  deadlock_analyzer.py  exception_handling_analyzer.py  infinite_loop_analyzer.py  mypy_analyzer.py  pylint_analyzer.py  radon_analyzer.py  resource_consumption_analyzer.py  safety_analyzer.py  string_concat_analyzer.py  vulture_analyzer.py  xenon_analyzer.py
python/requirements/: base.txt  full.txt
python/tests/: __init__.py  test_bandit_analyzer.py  test_data_structure_analyzer.py  test_deadlock_analyzer.py  test_exception_handling_analyzer.py  test_infinite_loop_analyzer.py  test_main.py  test_mypy_analyzer.py  test_pylint_analyzer.py  test_radon_analyzer.py  test_resource_consumption_analyzer.py  test_safety_analyzer.py  test_string_concat_analyzer.py  test_vulture_analyzer.py  test_xenon_analyzer.py
