[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycq_analyzer"
version = "0.1.0"
description = "Python Code Quality Analyzer"
readme = "README.md"
authors = [
    {name = "Maxime Robeyns", email = "maxime@igent.ai"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=6.0",
    "rich>=12.0.0",
    "pylint>=2.17.0",
    "flake8>=6.0.0",
    "radon>=5.1.0",
    "xenon>=0.9.0",
    "pydocstyle>=6.3.0",
    "vulture>=2.7",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "mypy>=1.3.0",
    "pyflakes>=3.0.1",
    "mccabe>=0.7.0",
    "pycodestyle>=2.10.0",
    "isort>=5.12.0",
]

[project.optional-dependencies]
full = [
    "py-spy>=0.3.14",
    "scalene>=1.5.20",
    "line_profiler>=4.0.0",
    "memory_profiler>=0.61.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "psutil>=5.9.5",
    "pyinstrument>=4.5.0",
    "guppy3>=3.1.2",
]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]

[project.scripts]
pycq-analyzer = "pycq_analyzer.main:main"

[tool.setuptools]
packages = ["pycq_analyzer"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88
